[package]
name = "hash-gate"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1.4.1", features = [ "v4", "serde" ] }
reqwest = { version = "0.12.4", features = ["json"]}
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0.118"
chrono = { version = "0.4.38", features = ["serde"] }
